Add constrained execution environment for tests, max memory set to 768Mb, the maximum heap size given by coding game